# Dashboard

./: .gitignore  .replit  GROQ_API_INTEGRATION_SUMMARY.md  LICENSE  README.markdown  README.md  app.py  brahman.ipynb  debug_pdf_text.py  krishna.ipynb  pyproject.toml  requirements.txt  test_advanced_parser.py  test_complete_workflow.py  test_integration.py  test_pdf_integration.py  test_streamlit_enhanced_extraction.py  test_streamlit_integration.py
.github/workflows/: test.yml
.kiro/steering/: product.md  (+2 more)
.streamlit/: config.toml
attached_assets/: Pasted--COMPLETE-UNIFIED-R-1753207534230_1753207534231.txt  Pasted--Simplify-Class-Interactions-and-State-Management-The-current-plan-suggests-passing-the-large-mode-1753208003212_1753208003212.txt  Pasted-App-Architecture-Class-Specifications-FDD-Your-current-UnifiedResearcherSystem-class-is-a-God-C-1753207496729_1753207496730.txt
backend/: .coverage.Sakshams-MacBook-Air.local.71409.XIWYpOox  .env.docker  .env.example  .gitignore  Dockerfile  Makefile  ORBSTACK_DEPLOYMENT_SUMMARY.md  REFACTORING_SUMMARY.md  config.py  docker-compose.test.yml  docker-compose.yml  docker-setup.sh  pytest.ini  requirements.txt  test-containerized-workflow.sh  test_deconstruct_manual.py  test_deconstruct_simple.py  test_section_chunking_edge_cases.py  test_section_chunking_manual.py  test_small.py  worker.py
modules/: data_loader.py  data_models.py  enhanced_skill_extractor.py  report_generator.py  solicitation_parser.py
notebooks/: brahman.ipynb  dashboard_CADS.ipynb
replit/: replit.md
test/: README.md  comprehensive_test.py
(+149 files in other folders)
