[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "groq>=0.30.0",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pypdf2>=3.0.0",
    "python-docx>=1.1.0",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=2.0.0",
    "streamlit>=1.47.0",
    "psutil>=5.9.0",
]